--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playwrite+HU:wght@100..400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Coffee</title>
 </head>
 
 <body>
     <header>
-
         <section class="hero">
             <div class="hero-overlay">
                 <nav class="navbar">
@@ -253,7 +254,7 @@
         </div>
 
         <div class="swiper-slide">
-            <div class="type">
+           <div class="type">
           <img src="images/profiteroles.jpg" alt="Profiteroles" />
           <p class="name">Profiteroles</p>
           <p class="description">Choux pastry puffs filled with ice cream, topped with chocolate drizzle.</p>
